fix: scrollbar background radius

--- a/app/assets/style/components/_scrollbar.scss
+++ b/app/assets/style/components/_scrollbar.scss
@@ -4,6 +4,7 @@
     border-radius: 10px;
   }
   &::-webkit-scrollbar-track{
+    border-radius: 10px;
     background: $gray-100;
   }
   &::-webkit-scrollbar-thumb{
